--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html>
 <head>
     <link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    img {
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      padding: 5px;
+      width: 350px;
+      }
+
+    img:hover {
+      box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+      }
+</style>
     <style>
         body {
             font-family: 'Roboto Condensed';font-size: 22px;
@@ -38,7 +51,9 @@
     
   <h1> Welcome to my HTML Resume! </h1>
   <p> My name is Cindy Burgos and this is my HTML resume.</p> 
-  <img src="atarmauritania.jpeg" alt="Atar, Mauritania"height="255">
+  <a target="_blank" href="atarmauritania.jpeg">
+    <img src="atarmauritania.jpeg" alt="Atar, Mauritania" style="width: 350px">
+  </a>
 
   <h3>Contact Info</h3>
   <div id="ContactInfo">
